--- a/claims/2.html
+++ b/claims/2.html
@@ -14,7 +14,7 @@
             </div>
             <!--Creates content inside box-->
          <div class="container">
-           <!--Allow usrrs to put what happened-->
+           <!--Allow users to put what happened-->
           <label for="ACCIDENT"><b>What has happened?</b></label>
           <input  list="q1" type="text" placeholder="" name="uname" required>
             <datalist id="q1">
@@ -22,7 +22,7 @@
               <option value="Crash">
               <option value="Flat Tire">
               <option value="Oil leak">
-              <option value="Collicon(Not with other car)">
+              <option value="Collision(Not with other car)">
               <option value="Other(Please type in box)">
             </datalist>
           </div>
@@ -100,9 +100,9 @@
               <option value="Engine">
               <option value="Boot">
               <option value="Driver-side door">
-              <option value="Passangers-side door">
+              <option value="Passengers-side door">
               <option value="Roof">
-              <option value="Wheel's">
+              <option value="Wheels">
               <option value="N/A">
             </datalist>
           </div>
@@ -118,11 +118,11 @@
             <h3 style="text-align: center;">Question Six</h3>
           </div>
           <div class="container">
-            <label for="CCTV"><b>Was There any where else?</b></label required>
+            <label for="CCTV"><b>Was there any where else?</b></label required>
             <input  list="yesorno" type="text" placeholder="" name="uname">
             <datalist id="yesorno">
-              <option value="Yes, Frount Side of vechile">
-              <option value="Yes, Behind of vechile">
+              <option value="Yes, Front Side of vehicle">
+              <option value="Yes, Behind of vehicle">
               <option value="No">
               <option value="Yes, Other (Type In own words)">
               <option value="N/A">
@@ -134,13 +134,13 @@
           </div>
         </form>
       </div>
-      <div id="id07" class="modal"> <!--How many people was involed in the accident?-->
+      <div id="id07" class="modal"> <!--How many people was involved in the incident?-->
         <form class="modal-content animate">
           <div class="imgcontainer">
             <h3 style="text-align: center;">Question Seven</h3>
           </div>
           <div class="container">
-            <label for="CCTV"><b>How many people was involed in the incident?</b></label required>
+            <label for="CCTV"><b>How many people was involved in the incident?</b></label required>
             <input  list="yesorno" type="text" placeholder="" name="uname">
             <datalist id="yesorno">
               <option value="Yes">
@@ -154,13 +154,13 @@
           </div>
         </form>
       </div>
-      <div id="id08" class="modal"> <!--Is there any Dash cam evidence-->
+      <div id="id08" class="modal"> <!--Is there any dash-cam evidence-->
         <form class="modal-content animate">
           <div class="imgcontainer">
             <h3 style="text-align: center;">Question Eight</h3>
           </div>
           <div class="container">
-            <label for="CCTV"><b>Is there any dash came evidence?</b></label required>
+            <label for="CCTV"><b>Is there any dash-cam evidence?</b></label required>
             <input  list="yesorno" type="text" placeholder="" name="uname">
             <datalist id="yesorno">
               <option value="Yes">
