--- a/claims/Questions.html
+++ b/claims/Questions.html
@@ -30,7 +30,7 @@
             </div>
             <!--Creates content inside box-->
          <div class="container">
-           <!--Allow usrrs to put what happened-->
+           <!--Allow users to put what happened-->
           <label for="ACCIDENT"><b>What has happened?</b></label>
           <input  list="q1" type="text" placeholder="" name="ACCIDENT" required>
             <datalist id="q1">
@@ -46,7 +46,7 @@
           </div>
         </form>
       </div>
-      <div id="id02" class="modal"> <!--Was there cctv?-->
+      <div id="id02" class="modal"> <!--Was there CCTV?-->
         <form class="modal-content animate">
           <div class="imgcontainer">
             <span onclick="document.getElementById('id02').style.display='none', document.getElementById('close').style.display='block'" class="close" title="Close">&times;</span>
@@ -112,16 +112,16 @@
             <input type="p" list="title_list" placeholder="Question Five" name="title">
           </div>
           <div class="container">
-            <label for="DMGPT1"><b>Where Was the damage done?</b></label required>
+            <label for="DMGPT1"><b>Where was the damage done?</b></label required>
             <input  list="DMGPT1" type="text" placeholder="" name="DMGPT1">
             <datalist id="DMGPT1">
               <option value="Bonnet">
               <option value="Engine">
               <option value="Boot">
               <option value="Driver-side door">
-              <option value="Passangers-side door">
+              <option value="Passengers-side door">
               <option value="Roof">
-              <option value="Wheel's">
+              <option value="Wheels">
               <option value="N/A">
             </datalist>
           </div>
@@ -142,8 +142,8 @@
             <label for="DMGPT2"><b>Was There any where else?</b></label required>
             <input  list="DMGPT2" type="text" placeholder="" name="DMGPT2">
             <datalist id="DMGPT2">
-              <option value="Yes, Frount Side of vechile">
-              <option value="Yes, Behind of vechile">
+              <option value="Yes, Front Side of vehicle">
+              <option value="Yes, Behind of vehicle">
               <option value="No">
               <option value="Yes, Other (Type In own words)">
               <option value="N/A">
@@ -155,7 +155,7 @@
           </div>
         </form>
       </div>
-      <div id="id07" class="modal"> <!--How many people was involed in the accident?-->
+      <div id="id07" class="modal"> <!--How many people was involved in the accident?-->
         <form class="modal-content animate">
           <div class="imgcontainer">
             <span onclick="document.getElementById('id07').style.display='none', document.getElementById('close').style.display='block'" class="close" title="Close">&times;</span>
@@ -163,7 +163,7 @@
             <input type="p" list="title_list" placeholder="Question Seven" name="title">
           </div>
           <div class="container">
-            <label for="PEOLPLE"><b>How many people was involed in the incident?</b></label required>
+            <label for="PEOLPLE"><b>How many people was involved in the incident?</b></label required>
             <input  list="People" type="text" placeholder="" name="People">
             <datalist id="People">
               <option value="1-4">
@@ -177,7 +177,7 @@
           </div>
         </form>
       </div>
-      <div id="id08" class="modal"> <!--Is there any Dash cam evidence-->
+      <div id="id08" class="modal"> <!--Is there any dash-cam evidence-->
         <form class="modal-content animate">
           <div class="imgcontainer">
             <span onclick="document.getElementById('id08').style.display='none', document.getElementById('close').style.display='block'" class="close" title="Close">&times;</span>
