--- a/claims/unable_pet.html
+++ b/claims/unable_pet.html
@@ -1,15 +1,15 @@
 <html>
 <head>
-  <title>Unable to rearch servise</title>
+  <title>Unable to reach service</title>
   <link href="../CSS.css" rel="stylesheet" type="text/css" />
   <script src="js.js"></script>
 </head>
 <body>
-  <div id="outterbox">
+  <div id="outerbox">
     <div id="mainlog">
       <h1>Welcome to Covéa</h1>
-      <h2>Sorry to inform you but your <b>PET</b> cover is unavailable on our mobile app at the moment. Please vist your local branch, Halifax dean clough<br> sorry for any inconvience! <br></h2>
-      <!--<button onclick="random()"style="width:65%; height: 15%">Generate your unique refernce number</button>
+      <h2>Sorry to inform you but your <b>PET</b> cover is unavailable on our mobile app at the moment. Please visit your local branch, Halifax dean clough<br> sorry for any inconvenience! <br></h2>
+      <!--<button onclick="random()"style="width:65%; height: 15%">Generate your unique reference number</button>
       <p id="gen"></p> -->
       <button style="width:65%; height: 15%"><a href="../mainpage.html"><h2>Home</h2></a></button>
     </div>
