--- a/claims/Questions.html
+++ b/claims/Questions.html
@@ -24,13 +24,14 @@
       <div id="id01" class="modal_2"> <!--What Has happened?-->
         <form for="myForm" class="modal-content animate">
             <div class="imgcontainer">
+              <img src="../images/Logo.png" alt="Covea logo" width="200px" height="200px">
               <span onclick="document.getElementById('id01').style.display='none', document.getElementById('close').style.display='block'" class="close" title="Close">&times;</span>
                 <label for="title"></title>
                 <input type="p" list="title_list" onclick="goToQ" placeholder="Question One" name="title">
             </div>
             <!--Creates content inside box-->
          <div class="container">
-           <!--Allow users to put what happened-->
+           <!--Allow usrrs to put what happened-->
           <label for="ACCIDENT"><b>What has happened?</b></label>
           <input  list="q1" type="text" placeholder="" name="ACCIDENT" required>
             <datalist id="q1">
@@ -46,9 +47,10 @@
           </div>
         </form>
       </div>
-      <div id="id02" class="modal"> <!--Was there CCTV?-->
+      <div id="id02" class="modal"> <!--Was there cctv?-->
         <form class="modal-content animate">
           <div class="imgcontainer">
+            <img src="../images/Logo.png" alt="Covea logo" width="200px" height="200px">
             <span onclick="document.getElementById('id02').style.display='none', document.getElementById('close').style.display='block'" class="close" title="Close">&times;</span>
             <label for="title"></title>
             <input type="p" list="title_list" placeholder="Question Two" name="title">
@@ -66,6 +68,7 @@
       <div id="id03" class="modal"> <!--Was there any witnesses?-->
         <form class="modal-content animate">
           <div class="imgcontainer">
+            <img src="../images/Logo.png" alt="Covea logo" width="200px" height="200px">
             <span onclick="document.getElementById('id03').style.display='none', document.getElementById('close').style.display='block'" class="close" title="Close">&times;</span>
             <label for="title"></title>
             <input type="p" list="title_list" placeholder="Question Three" name="title">
@@ -89,6 +92,7 @@
       </div>
       <div id="id04" class="modal"> <!--Where did it happen?-->
         <form class="modal-content animate">
+          <img src="../images/Logo.png" alt="Covea logo" width="200px" height="200px">
           <div class="imgcontainer">
             <span onclick="document.getElementById('id04').style.display='none', document.getElementById('close').style.display='block'" class="close" title="Close">&times;</span>
             <label for="title"></title>
@@ -107,21 +111,22 @@
       <div id="id05" class="modal"> <!--What damage was done? PT1-->
         <form class="modal-content animate">
           <div class="imgcontainer">
+            <img src="../images/Logo.png" alt="Covea logo" width="200px" height="200px">
             <span onclick="document.getElementById('id05').style.display='none', document.getElementById('close').style.display='block'" class="close" title="Close">&times;</span>
             <label for="title"></title>
             <input type="p" list="title_list" placeholder="Question Five" name="title">
           </div>
           <div class="container">
-            <label for="DMGPT1"><b>Where was the damage done?</b></label required>
+            <label for="DMGPT1"><b>Where Was the damage done?</b></label required>
             <input  list="DMGPT1" type="text" placeholder="" name="DMGPT1">
             <datalist id="DMGPT1">
               <option value="Bonnet">
               <option value="Engine">
               <option value="Boot">
               <option value="Driver-side door">
-              <option value="Passengers-side door">
+              <option value="Passangers-side door">
               <option value="Roof">
-              <option value="Wheels">
+              <option value="Wheel's">
               <option value="N/A">
             </datalist>
           </div>
@@ -134,6 +139,7 @@
       <div id="id06" class="modal"> <!--What damage was done? PT2-->
         <form class="modal-content animate">
           <div class="imgcontainer">
+            <img src="../images/Logo.png" alt="Covea logo" width="200px" height="200px">
             <span onclick="document.getElementById('id06').style.display='none', document.getElementById('close').style.display='block'" class="close" title="Close">&times;</span>
             <label for="title"></title>
             <input type="p" list="title_list" placeholder="Question Six" name="title">
@@ -142,8 +148,8 @@
             <label for="DMGPT2"><b>Was There any where else?</b></label required>
             <input  list="DMGPT2" type="text" placeholder="" name="DMGPT2">
             <datalist id="DMGPT2">
-              <option value="Yes, Front Side of vehicle">
-              <option value="Yes, Behind of vehicle">
+              <option value="Yes, Frount Side of vechile">
+              <option value="Yes, Behind of vechile">
               <option value="No">
               <option value="Yes, Other (Type In own words)">
               <option value="N/A">
@@ -155,15 +161,16 @@
           </div>
         </form>
       </div>
-      <div id="id07" class="modal"> <!--How many people was involved in the accident?-->
+      <div id="id07" class="modal"> <!--How many people was involed in the accident?-->
         <form class="modal-content animate">
           <div class="imgcontainer">
+            <img src="../images/Logo.png" alt="Covea logo" width="200px" height="200px">
             <span onclick="document.getElementById('id07').style.display='none', document.getElementById('close').style.display='block'" class="close" title="Close">&times;</span>
             <label for="title"></title>
             <input type="p" list="title_list" placeholder="Question Seven" name="title">
           </div>
           <div class="container">
-            <label for="PEOLPLE"><b>How many people was involved in the incident?</b></label required>
+            <label for="PEOLPLE"><b>How many people was involed in the incident?</b></label required>
             <input  list="People" type="text" placeholder="" name="People">
             <datalist id="People">
               <option value="1-4">
@@ -177,9 +184,10 @@
           </div>
         </form>
       </div>
-      <div id="id08" class="modal"> <!--Is there any dash-cam evidence-->
+      <div id="id08" class="modal"> <!--Is there any Dash cam evidence-->
         <form class="modal-content animate">
           <div class="imgcontainer">
+            <img src="../images/Logo.png" alt="Covea logo" width="200px" height="200px">
             <span onclick="document.getElementById('id08').style.display='none', document.getElementById('close').style.display='block'" class="close" title="Close">&times;</span>
             <label for="title"></title>
             <input type="p" list="title_list" placeholder="Question Eight" name="title">
@@ -202,6 +210,7 @@
       <div id="id09" class="modal"> <!--Was anyone hurt?-->
         <form class="modal-content animate">
           <div class="imgcontainer">
+            <img src="../images/Logo.png" alt="Covea logo" width="200px" height="200px">
             <span onclick="document.getElementById('id09').style.display='none', document.getElementById('close').style.display='block'" class="close" title="Close">&times;</span>
             <label for="title"></title>
             <input type="p" list="title_list" placeholder="Question Nine" name="title">
@@ -224,6 +233,7 @@
       <div id="id10" class="modal"> <!--If so, How badly?-->
         <form class="modal-content animate" action="./hotlelsurnan.html" method="post">
           <div class="imgcontainer">
+            <img src="../images/Logo.png" alt="Covea logo" width="200px" height="200px">
             <span onclick="document.getElementById('id10').style.display='none', document.getElementById('close').style.display='block'" class="close" title="Close">&times;</span>
             <label for="title"></title>
             <input type="p" list="title_list" placeholder="Question One" name="title">IFSO
@@ -247,7 +257,8 @@
       <div id="id11" class="modal"> <!--If so, How badly?-->
         <form class="modal-content animate" action="./awaiting.html" method="post">
           <div class="imgcontainer">
-            <label for="title"></title>
+            <img src="../images/Logo.png" alt="Covea logo" width="200px" height="200px">
+            <label for="title"></label>
               <span onclick="document.getElementById('id11').style.display='none', document.getElementById('close').style.display='block'" class="close" title="Close">&times;</span>
             <input type="p" list="title_list" placeholder="PREMIUME!" name="title">
           </div>
@@ -267,7 +278,8 @@
       <div id="close" class="modal"> <!--If so, How badly?-->
         <form class="modal-content animate" action="../mainpage.html" method="post">
           <div class="imgcontainer">
-            <label for="title"></title>
+            <img src="../images/Logo.png" alt="Covea logo" width="200px" height="200px">
+            <label for="close"></label>
             <input type="p" list="title_list" placeholder="Leaving.." name="title">
           </div>
           <div class="container">
