--- a/mainpage.html
+++ b/mainpage.html
@@ -8,13 +8,13 @@
     <div id"outerbox">
       <div id="header">
         <div class="dropdown">
-          <button onclick="myFunction()" class="dropbtn" style="width: 20%; height: 25%;"></button>
+          <button onclick="myFunction()" class="dropbtn" style="width: 50%; height: 25%;"></button>
           <div id="myDropdown" class="dropdown-content">
            <!--<input type="text" placeholder="Search..." id="myInput" onkeyup="filterFunction()">-->
-              <button onclick="document.getElementById('id01').style.display='block'" style="width: 40%; height: 20%;"><h2>Account</h2></button><br>
-              <button onclick="document.getElementById('id02').style.display='block'" style="width: 40%; height: 20%;"><h2>Contact</h2></button><br>
-              <button onclick="document.getElementById('id03').style.display='block'" style="width: 40%; height: 20%;"><h2>Support</h2></button><br>
-              <button onclick="document.getElementById('id04').style.display='block'" style="width: 40%; height: 20%;"><h2>Logout</h2></button><br>
+              <button onclick="document.getElementById('id01').style.display='block'" style="width: 95%; height: 20%;"><h2>Account</h2></button><br>
+              <button onclick="document.getElementById('id02').style.display='block'" style="width: 90%; height: 20%;"><h2>Contact</h2></button><br>
+              <button onclick="document.getElementById('id03').style.display='block'" style="width: 90%; height: 20%;"><h2>Support</h2></button><br>
+              <button onclick="document.getElementById('id04').style.display='block'" style="width: 90%; height: 20%;"><h2>Logout</h2></button><br>
           </div>
           <div id="id01" class="modal">
             <form class="modal-content animate" action="./account.html" method="post">
@@ -107,58 +107,64 @@
           </div>
           <h1 style="text-align: center;"> Covéa insurance </h1>
 <img src="./images/Logo.png" alt="Covea Logo" width="200px" height="200px"><br>
-       </div>
+        </div>
       <div id="main">
         <br>
-        <h2 style="color: black;"> Your Policys!</h2>
         <h2 style="color: black;"> Your Policies!</h2>
         <br>
         <br>
         <div id="main_c">
             <div id="policy"> <!--Policy Box 1 - Motor Cover-->
             <h1>You have Motor Insurance</h1>
-                <h3 style="text-align: center;">With Motor Cover you're able to claim for breakdowns, Crashs,Car Fire and more!<br> This Insurance allows you to have complete cover of your vechiles no matter what happens.</h3>
                 <h3 style="text-align: center;">With Motor Cover you're able to claim for breakdowns, Crashes,Car fires and more!<br> This Insurance allows you to have complete cover of your vehicles no matter what happens.</h3>
           </div>
           <div id=central>
             <a href="./claims/motor.html">  <button style="width: auto; height: auto;" class="main_button"><h2>Make a Claim now!</h2></button></a>
-@@ -127,7 +127,7 @@ <h3 style="text-align: center;">With Motor Cover you're able to claim for breakd
+          </div>
+        </div>
+        <div id="space">
+        </div>
         <div id="main_c"><!--Lost pet cover-->
             <div id="policy_alt"> <!--Policy Box 1 - Motor Cover-->
             <h1>You have Lost pet Cover</h1>
-                <h3 style="text-align: center;">With Lost pet Cover you're able to claim if your pet has run-away, been lost, or sadly passed on</h3>
                 <h3 style="text-align: center;">With Lost pet Cover you're able to claim if your pet has ran away from home,lost, or sadly passed on</h3>
           </div>
           <div id=central>
             <a href="./claims/pet.html">  <button style="width: auto; height: auto;" class="main_button"><h2>Make a Claim now!</h2></button></a>
-@@ -138,7 +138,7 @@ <h3 style="text-align: center;">With Lost pet Cover you're able to claim if your
+          </div>
+        </div>
+        <br>
+        <br>
         <div id="main_c"><!--Fire Cover-->
             <div id="policy"> <!--Policy Box 1 - Motor Cover-->
             <h1>You have Fire Cover</h1>
-                <h3 style="text-align: center;">With Fire Cover you're able to claim if there has been a fire at any of your propertys.<br> This Cover allows you to have complete cover of your Buildings/homes no matter what happens.</h3>
                 <h3 style="text-align: center;">With Fire Cover you're able to claim if there has been a fire at any of your properties.<br> This Cover allows you to have complete cover of your Buildings/homes no matter what happens.</h3>
           </div>
           <div id=central>
             <a href="./claims/pet.html">  <button style="width: auto; height: auto;" class="main_button"><h2>Make a Claim now!</h2></button></a>
-@@ -149,7 +149,7 @@ <h3 style="text-align: center;">With Fire Cover you're able to claim if there ha
+          </div>
+        </div>
+        <br>
+        <br>
         <div id="main_c"><!--Home Cover-->
             <div id="policy_alt"> <!--Policy Box 1 - Motor Cover-->
             <h1>You have Home Cover</h1>
-                <h3 style="text-align: center;">With Fire Cover you're able to claim if there has been a fire at any of your propertys.<br> This Cover allows you to have complete cover of your Buildings/homes no matter what happens.</h3>
                 <h3 style="text-align: center;">With Home Cover you're able to claim if there has been a fire at any of your properties.<br> This Cover allows you to have complete cover of your Buildings/homes no matter what happens.</h3>
           </div>
           <div id=central>
             <a href="./claims/pet.html">  <button style="width: auto; height: auto;" class="main_button"><h2>Make a Claim now!</h2></button></a>
-@@ -160,7 +160,7 @@ <h3 style="text-align: center;">With Fire Cover you're able to claim if there ha
+          </div>
+        </div>
+        <br>
+        <br>
         <div id="main_c"><!--Theft Cover-->
             <div id="policy"> <!--Policy Box 1 - Motor Cover-->
             <h1>You have Theft Cover</h1>
-                <h3 style="text-align: center;">With Fire Cover you're able to claim if there has been a fire at any of your propertys.<br> This Cover allows you to have complete cover of your Buildings/homes no matter what happens.</h3>
                 <h3 style="text-align: center;">With Theft Cover you're able to claim if there has been a robbery at any of your propertys.<br> This Cover allows you to have complete cover of your Buildings/homes no matter what happens.</h3>
           </div>
           <div id=central>
             <a href="./claims/pet.html">  <button style="width: auto; height: auto;" class="main_button"><h2>Make a Claim now!</h2></button></a>
-
+          </div>
         </div>
         <br>
         <br>
